--- a/D02/HomeWork.1/About_Us.html
+++ b/D02/HomeWork.1/About_Us.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <a href="http://127.0.0.1:5500/Homework.html">Home <img src="../images/logo.PNG" alt="hinh qua tao"></a>
+    <a href="https://nguyenthien123.github.io/2.HCJS/D02/HomeWork.1/Homework.html">Home <img src="../images/logo.PNG" alt="hinh qua tao"></a>
     <h2>About Us</h2>
     <hr>
     <h4>Address:</h4>
