--- a/D02/HomeWork.1/ContactUs.html
+++ b/D02/HomeWork.1/ContactUs.html
@@ -7,7 +7,7 @@
     <title>Contact Us</title>
 </head>
 <body>
-    <a href="http://127.0.0.1:5500/Homework.html">Home <img src="../images/logo.PNG" alt="hinh qua tao"></a>
+    <a href="hhttps://nguyenthien123.github.io/2.HCJS/D02/HomeWork.1/Homework.html">Home <img src="../images/logo.PNG" alt="hinh qua tao"></a>
     <h2>Contact Us</h2>
     <hr>
     <p>
