--- a/D02/HomeWork.1/Downloads.html
+++ b/D02/HomeWork.1/Downloads.html
@@ -7,7 +7,7 @@
     <title>Download</title>
 </head>
 <body>
-    <a href="http://127.0.0.1:5500/Homework.html">Home <img src="../images/logo.PNG" alt="hinh qua tao"></a>
+    <a href="https://nguyenthien123.github.io/2.HCJS/D02/HomeWork.1/Homework.html">Home <img src="../images/logo.PNG" alt="hinh qua tao"></a>
     <h2>Downloads</h2>
     <hr>
     <p>
