--- a/D02/HomeWork.1/Homework.html
+++ b/D02/HomeWork.1/Homework.html
@@ -17,11 +17,11 @@
 </head>
 <body>
     <p> 
-        <a href="http://127.0.0.1:5500/Homework.html">Home <img src="../images/logo.PNG" alt="hinh qua tao"></a>|
-        <a href="http://127.0.0.1:5500/Product.html">Product </a>  |
-        <a href="http://127.0.0.1:5500/About_Us.html">About Us</a> |
-        <a href="http://127.0.0.1:5500/Downloads.html">Downloads</a>|
-        <a href="http://127.0.0.1:5500/ContactUs.html">Contactus</a> </a>
+        <a href="https://nguyenthien123.github.io/2.HCJS/D02/HomeWork.1/Homework.html">Home <img src="../images/logo.PNG" alt="hinh qua tao"></a>|
+        <a href="https://nguyenthien123.github.io/2.HCJS/D02/HomeWork.1/Product.html">Product </a>  |
+        <a href="https://nguyenthien123.github.io/2.HCJS/D02/HomeWork.1/About_Us.html">About Us</a> |
+        <a href="https://nguyenthien123.github.io/2.HCJS/D02/HomeWork.1/Downloads.html">Downloads</a>|
+        <a href="https://nguyenthien123.github.io/2.HCJS/D02/HomeWork.1/ContactUs.html">Contactus</a> </a>
     </p>
     
     <img src="../images/p1.PNG">
