--- a/D02/HomeWork.2/L03_CSS_inline.html
+++ b/D02/HomeWork.2/L03_CSS_inline.html
@@ -7,6 +7,16 @@
     <title>web</title>
 </head>
 <body>
-    
+    <h2 style="color: red; font-family:georgia;">HTML5</h2>
+    <p style="font-size: 1.2em;">
+    HTML5 is a markup language used for structuring and presenting content on the World
+    Wide Web
+</p>
+<p style="font-style: italic;">
+   HTML5 was the fifth and last major version of HTML that is a world wide web consortium
+   (W3c) recommendation. The current specification is known as the HTML living standard
+   and is maintained by a consortium of the major browser vendors (Apple, Google, Mozilla,
+   and Microsoft),the web hypertext application technology working group (WHATWG).
+</p>
 </body>
 </html>
