--- a/D03/D03_CSS_Unit_em.html
+++ b/D03/D03_CSS_Unit_em.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css-unit</title>
+    <!-- day la lien ket den tap tin css-->
+    <link rel="stylesheet" href="../css/D03_css.css">
     <style>
         div{
             margin: 20px;
