--- a/D04/D04_image_thumbnail.html
+++ b/D04/D04_image_thumbnail.html
@@ -14,6 +14,7 @@
         #tv{
             position: relative;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 1.1rem;
         }
         #tv ul{
             list-style-type: none;
@@ -28,9 +29,10 @@
             position: absolute;
             top: 10px;
             left: 500px;
+            display: none;
         }
         #tv li:hover span{
-            display: none;
+            display: block;
         }
     </style>
 </head>
@@ -46,20 +48,20 @@
         <ul>
             <li><img src="../images/smallbanhmi.png" alt="">
                 <span>
-                    <img src="../images/banhmi.png" alt="">
+                    <img src="../images/banhmi.png" alt=""><br>
                     <p>Banh mi<br>Gia: 15.000 VND</p>
                     
                 </span>
             </li>
             <li><img src="../images/smallbunbo.png" alt="">
                 <span>
-                    <img src="../images/bunbo.png" alt="">
+                    <img src="../images/bunbo.png" alt=""><br>
                     <p>Bun bo<br>Gia: 45.000 VND</p>
                 </span>
             </li>
             <li><img src="../images/smallcomtam.png" alt="">
                 <span>
-                    <img src="../images/comtam.png" alt="">
+                    <img src="../images/comtam.png" alt=""><br>
                     <p>Com tam<br>Gia: 35.000 VND</p>
                 </span>
             </li>
