--- a/D05/D05_form_register.html
+++ b/D05/D05_form_register.html
@@ -19,7 +19,7 @@
             <div>
                 
                     <label for="">Username</label>
-                    <input type="text" name="user" id="user" required>
+                    <input type="text" name="user" id="user" required placeholder="Enter your account" autofocus>
             </div>
             <div>
                 <form action="" method="post">
@@ -64,6 +64,10 @@
                 cols="30" rows="4">Nothing ...</textarea>
             </div>
         </fieldset>
+        <div>
+            <input type="submit" value="Submit">
+            <input type="reset" value="Reset">
+        </div>
     </form>
 </body>
 </html>
