--- a/D05/HomeWork/L08_Login.html
+++ b/D05/HomeWork/L08_Login.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <h2>Login</h2>
-    <form action="L08_Login_Welcome.html">
+    <form action="HW2.html">
     Username: <input type="text" id="User" name="User"
     required> <br><br>
     Password: <input type="password" id="pass" name="pass" required> <br><br>
 
     <input type="submit" value="submit" name="ok">
     <input type="reset" value="Reset">
+    <label for="">Comment</label>
+                <textarea name="comment" id="comment" 
+                cols="30" rows="4" placeholder="Input your comments"></textarea>
     </form>
 </body>
 </html>
